<resources>
    <string name="app_name">buildCollab</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm-Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="my_group">MyGroups</string>
    <string name="my_project">MyProjects</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="filter_group">Filter Groups</string>
    <string name="new_group">+ New Group</string>
    <string name="filter_projects">Filter Projects</string>
    <string name="new_project">+ New Project</string>
    <string name="create_project">Create Project</string>
    <string name="project_title">Project Title * :</string>
    <string name="project_description">Project Description* :</string>
    <string name="minimum_group_size">Minimum group size</string>
    <string name="required_knowledge">Required Knowledge</string>
    <string name="related_tags_ex_game_development">Related Tags(ex: game development)</string>
    <string name="fields_marked_with_asterisk_are_mandatory">* fields marked with asterisk are mandatory</string>
    <string name="create">Create</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name* :</string>
    <string name="group_description">Group Description* :</string>
    <string name="description">Description:</string>
    <string name="interests">Interests: </string>
    <string name="portfolio">Portfolio</string>
    <string name="areas_of_work">Areas Of Work: </string>
    <string name="ask_for_invite">Ask for invite</string>
    <string name="join">Join</string>
    <string name="member">Member</string>
    <string name="area_of_discussion">Area of Discussion:</string>
    <string name="title">Title</string>
    <string name="g">G</string>
    <string name="p">P</string>
    <string name="u">U</string>
    <string name="new_post">New Post</string>
    <string name="post_description">Post Description* </string>
    <string name="post_title">Post Title*</string>
</resources>