<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewPostActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/goback"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/go_back" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/new_post"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/postTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/post_title"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/postTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/postTitleText"
                android:background="@drawable/input_text"
                android:maxLines="1"
                android:minHeight="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/postDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/postTitleText"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/post_description"
                android:textSize="17sp" />


            <EditText
                android:id="@+id/postDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/postDescriptionText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_text"
                android:minHeight="150dp"
                android:padding="5dp"
                tools:ignore="SpeakableTextPresentCheck" />



            <Button
                android:id="@+id/addphoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/postDescription"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:text="Tags +" />

            <TextView
                android:id="@+id/law"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addphoto"
                android:layout_margin="10dp"
                android:text="@string/fields_marked_with_asterisk_are_mandatory" />

            <Button
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/law"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button"
                android:minHeight="50dp"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>