<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.NewProjectActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/create_group"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/groupNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/group_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/groupName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/title"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/groupNameText"
                android:background="@drawable/input_text"
                android:maxLines="1"
                android:paddingStart="10dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/groupDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/groupNameText"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/group_description"
                android:textSize="17sp" />


            <EditText
                android:id="@+id/groupDescription"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/groupDescriptionText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_text"
                android:padding="5dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/areaOfInterestText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/groupDescription"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="Area of Interest(ex: Animation)"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/areaOfInterest"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/areaOfInterestText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_text"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/addphoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/areaOfInterest"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:text="Photo+" />

            <TextView
                android:id="@+id/law"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addphoto"
                android:layout_margin="10dp"
                android:text="@string/fields_marked_with_asterisk_are_mandatory" />

            <Button
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/law"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>