<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/goback_login"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignTop="@id/Login_text"
                android:layout_marginStart="30dp"

                android:layout_marginBottom="20dp"
                android:background="@drawable/go_back" />

            <TextView
                android:id="@+id/Login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/Login_text"
                android:layout_centerInParent="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/input_text"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:singleLine="true"
                android:paddingStart="10dp" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/email_input"
                android:layout_centerInParent="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/input_text"
                android:backgroundTint="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp" />


            <Button
                android:id="@+id/login"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_below="@+id/password_input"
                android:layout_centerInParent="true"
                android:layout_marginTop="200dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/login" />
        </RelativeLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>