<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activity.GroupProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/goback"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/go_back"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/memberN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/goback"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:maxWidth="100dp"
                android:text="@string/member"
                android:textSize="20sp" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/groupPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="129dp"
                android:layout_marginTop="50dp"
                android:minWidth="150dp"
                android:minHeight="150dp"
                android:src="@drawable/ic_baseline_group_24"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:text="Public"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/askForInvite"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/groupPhoto"
                android:background="@color/buttonColor"
                android:text="@string/join" />

            <TextView

                android:id="@+id/groupName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/groupPhoto"
                android:layout_centerHorizontal="true"
                android:text="@string/name"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/editproject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/groupPhoto"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@id/groupName"
                android:background="@drawable/ic_baseline_edit_24"
                android:minWidth="30dp"
                android:minHeight="30dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/groupName"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/editDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/groupName"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/descriptionText"
                android:background="@drawable/ic_baseline_edit_24"
                android:minWidth="30dp"
                android:minHeight="30dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_text"
                android:backgroundTint="@color/white"
                android:minHeight="40dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/areaOfDiscussionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/area_of_discussion"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/areaOfDiscussion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/areaOfDiscussionText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/input_text"
                android:backgroundTint="@color/white"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />


        </RelativeLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>